# efta

./: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: api.rst  conf.py  index.rst
efta/: __init__.py  balance.py  errors.py  mixture.py  periodic_table.py  plotting.py  reaction.py  reactions.py  solution.py  species.py  styling.py  system.py
efta.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
efta/__pycache__/: balance.cpython-314.pyc.1405405415344  reactions.cpython-314.pyc.1405405413520  system.cpython-314.pyc.1405405415632
efta/model/: __init__.py  distribution.py  fitting.py  freaction.py  ga.py  mass_action.py  suggest.py
efta/model/__pycache__/: __init__.cpython-314.pyc.1405715343024  distribution.cpython-314.pyc.1405725424784  fitting.cpython-314.pyc.1405715343360  suggest.cpython-314.pyc.1405716417760
efta/solventextraction/: __init__.py  multistage.py  sx.py  units.py
efta/solventextraction/__pycache__/: __init__.cpython-314.pyc.1405759409712  sx.cpython-314.pyc.1405759409936  units.cpython-314.pyc.1405759411616
efta/solver/: __init__.py  _shared.py  dispatch.py  find.py  method_a.py  method_b.py  method_de.py  method_l.py
efta/solver/__pycache__/: _shared.cpython-314.pyc.1405405895952  find.cpython-314.pyc.1405716239088  method_de.cpython-314.pyc.1405715347056
